--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 body {
+  background: url("Backgrounds/9964425.png") no-repeat center center fixed;
+  background-size: cover; /* makes it fill the screen */
   margin: 0;
   padding: 0;
-  text-align: center;
-  font-family: 'Segoe UI', cursive, sans-serif;
-  background: linear-gradient(to right, #ffdde1, #ee9ca7);
-  overflow-x: hidden;
+  font-family: 'Arial', sans-serif;
 }
 
 h1 {
